# axum-jwt-auth

./: .env.example  Cargo.toml  Makefile  docker-compose.yml
migrations/: 20240120062259_init.up.sql
src/: config.rs  jwt_auth.rs  main.rs  response.rs
